--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -530,10 +530,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a0d72710-b6ed-4b30-83c1-3ae157bbda5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n",
+      "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n",
+      "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpress\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpx\u001b[39;00m\n",
+      "\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\n",
+      "\u001b[1;32m      8\u001b[0m capitals \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame([[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlabama\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMontgomery\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAL\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n",
+      "\u001b[1;32m      9\u001b[0m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlaska\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJuneau\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAK\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n",
+      "\u001b[1;32m     10\u001b[0m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArizona\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPhoenix\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAZ\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n",
+      "\u001b[0;32m   (...)\u001b[0m\n",
+      "\u001b[1;32m     56\u001b[0m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWisconsin\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMadison\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWI\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n",
+      "\u001b[1;32m     57\u001b[0m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWyoming\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCheyenne\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWY\u001b[39m\u001b[38;5;124m\"\u001b[39m]], columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcapital\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabbrev\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "#si-exercise\n",
     "\n",
@@ -593,11 +616,28 @@
     "[\"Wisconsin\",\"Madison\",\"WI\"],\n",
     "[\"Wyoming\",\"Cheyenne\",\"WY\"]], columns = ['state', 'capital', 'abbrev'])\n",
     "\n",
-    "###\n",
-    "### PUT YOUR CODE HERE. FEEL FREE TO USE THE PLOTTING COMMAND BELOW TO COMPLETE THE ASSIGNMENT\n",
-    "###\n",
+    "lats = []\n",
+    "lons = []\n",
     "\n",
-    "fig = px.scatter_geo(capitals, 'lat', 'lon', hover_data=['state', 'capital'], scope=\"usa\")"
+    "for i in capitals.index:\n",
+    "    url = \"https://api.zippopotam.us/us/{0}/{1}\".format(\n",
+    "        capitals.loc[i, 'abbrev'].lower(),\n",
+    "        capitals.loc[i, 'capital'].replace(\" \", \"_\").lower()\n",
+    "    )\n",
+    "\n",
+    "    r = requests.get(url)\n",
+    "    if r.status_code == 200:\n",
+    "        data = json.loads(r.text)\n",
+    "        lats.append(data['places'][0]['latitude'])\n",
+    "        lons.append(data['places'][0]['longitude'])\n",
+    "    else:\n",
+    "        lats.append(None)\n",
+    "        lons.append(None)\n",
+    "capitals['lat'] = lats\n",
+    "capitals['lon'] = lons\n",
+    "\n",
+    "fig = px.scatter_geo(capitals, 'lat', 'lon', hover_data=['state', 'capital'], scope=\"usa\")\n",
+    "fig.show()"
    ]
   }
  ],
@@ -608,16 +648,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
